create random sample

--- a/github_document.html
+++ b/github_document.html
@@ -128,7 +128,10 @@ $(document).ready(function () {
 </div>
 
 
-
+<div id="problem-1" class="section level1">
+<h1>Problem 1</h1>
+<pre class="r"><code>x = runif(10, 1, 5)</code></pre>
+</div>
 
 
 
